--- a/Index.html
+++ b/Index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+    <div id="page">
     <h1>Demande de la carte scolaire</h1>
-<header>
+<header div="header">
     <div id="gauche">
         <img src="logo.png" width="50px" height="50px">
     </div>
@@ -48,6 +50,8 @@
             <p>+223 00 00 00 00 </p>
             <p>www.ecole.com</p>
         </div>
-    </footer>
-</body>
+        </footer>
+    </div>
+    </body>
+
 </html>
