--- a/Index.html
+++ b/Index.html
@@ -9,9 +9,9 @@
 <body>
     <div id="page">
     <h1>Demande de la carte scolaire</h1>
-<header div="header">
+<header>
     <div id="gauche">
-        <img src="logo.png" width="50px" height="50px">
+        <img src="logo.png" alt="image" id="img">
     </div>
     <div id="droite">
         
